<resources>
    <string name="app_name">DietPro</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    
    <string name="delicious_recipes">Delicious Recipes</string>
    <string name="carb_per_gram">gm carb / 100 gm</string>
    <string name="ruppe_symbol">\u20B9</string>
    <string name="name_hint">Name/Mobile No</string>
    <string name="password_hint">Password</string>

    <string name="name_error">Please enter Name/Mobile no.</string>
    <string name="password_error">Please enter password</string>

    <string name="loading">Please wait.. loading..!</string>
    <string name="personal_trainer_likes">like count</string>
    <string name="sign_up">SignUp</string>
    <string name="register_name">Name</string>
    <string name="register_mobile">Mobile No</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>

    <string name="register_name_error">Please enter name</string>
    <string name="register_mobile_error">Please enter mobile nubmer</string>
    <string name="register_email_error">Please enter email-Id</string>
    <string name="register_password_error">Please enter password</string>
    <string name="no_data">No Data</string>
    <string name="item_removed">Item has been removed successfully..!</string>
    <string name="my_cart">My cart</string>
    <string name="checkout">Checkout</string>
    <string name="position">position</string>
    <string name="no_internet">Please check your internet connection and try again..</string>
    <string name="exception">Something went wrong.. Please try again..!</string>
    <string name="home_delivery">Home Delivery</string>
    <string name="gym_delivery">Gym Delivery</string>
    <string name="flavor_text">Flavor</string>
    <string name="plain">Plain</string>
    <string name="lime">Lime</string>
    <string name="ginger">Ginger</string>
    <string name="garlic">Garlic</string>

    <string name="address_hint">Address</string>
    <string name="address_error">Please enter Address</string>
    <string name="landmark_hint">Land Mark</string>
    <string name="landmark_error">Please enter Land Mark</string>
    <string name="pincode_hint">Pincode</string>
    <string name="pincode_error">Please enter Pincode</string>
    <string name="city_hint">City</string>
    <string name="city_error">Please enter City</string>
    <string name="state_hint">State</string>
    <string name="state_error">Please enter State</string>
    <string name="phone_no_hint">Phone No</string>
    <string name="phone_no_error">Please enter Phone No</string>
    <string name="email_hint">E-mail</string>
    <string name="email_error">Please enter E-mail</string>
    <string name="add_address">Add Address</string>
    <string name="save_address">Save Address</string>
    <string name="home_address">Home Address</string>
    <string name="gym_address">GYM Address</string>
    <string name="my_address">My Address</string>
    <string name="place_order">Place Order</string>
    <string name="please_add_address">Please add address</string>
    <string name="start_shopping">No items in your cart.. Start shopping</string>
    <string name="contactUs">Contact Us</string>
    <string name="description">Description</string>
    <string name="send">Send</string>
    <string name="description_error">Please enter Descrption</string>
    <string name="add_comments">Add Comments</string>
    <string name="cod">COD</string>
    <string name="online">Online Payment</string>
    <string name="select_payment_mode">Please Select payment mode</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="change">Change</string>
    <string name="please_select_quantity">Please select quantity</string>

</resources>
