<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.widget.ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@android:drawable/ic_dialog_email" />

        <android.widget.TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/contactUs"
            android:textSize="@dimen/size20"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/fragmentContactUstilName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <android.widget.EditText
                android:id="@+id/fragmentContactUsetName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_name"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/fragmentContactUstilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <android.widget.EditText
                android:id="@+id/fragmentContactUsetEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/fragmentContactUstilPhoneNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <android.widget.EditText
                android:id="@+id/fragmentContactUsetPhoneNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_no_hint"
                android:inputType="numberDecimal"
                android:maxLength="10" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/fragmentContactUstilDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <android.widget.EditText
                android:id="@+id/fragmentContactUsetDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <android.widget.TextView
            android:id="@+id/fragmentContactUstvSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/round_corner_btn"
            android:gravity="center"
            android:paddingBottom="15dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="15dp"
            android:text="@string/send"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>

</ScrollView>