<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="20dp"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/fragmentLoginScreentilName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.widget.EditText
            android:id="@+id/fragmentLoginScreenetName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/name_hint" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/fragmentLoginScreentilPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.widget.EditText
            android:id="@+id/fragmentLoginScreenetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password_hint" />

    </android.support.design.widget.TextInputLayout>

    <android.widget.TextView
        android:id="@+id/fragmentLoginScreentvSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:textSize="20dp"
        android:padding="10dp"
        android:textColor="@color/cardview_dark_background"
        android:background="@drawable/round_corner_btn"
        android:text="@string/common_signin_button_text"/>

    <android.widget.TextView
        android:id="@+id/fragmentLoginScreentvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="right"
        android:layout_gravity="right"
        android:textSize="20dp"
        android:padding="20dp"
        android:textColor="@color/cardview_dark_background"
        android:text="@string/sign_up"/>

</LinearLayout>